--- a/langChain.ipynb
+++ b/langChain.ipynb
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "28bb3ddc",
       "metadata": {
         "colab": {
@@ -224,7 +224,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "from transformers import pipeline, AutoTokenizer, AutoModelForCausalLM, AutoModelForSeq2SeqLM\n",
+        "from transformers import pipeline, AutoTokenizer, AutoModelForCausalLM, AutoModelForSeq2SeqLM, T5Tokenizer, T5ForConditionalGeneration, TrainingArguments, Trainer, DataCollatorForSeq2Seq\n",
         "from langchain.prompts import PromptTemplate\n",
         "from langchain_community.llms import HuggingFacePipeline\n",
         "from langchain.chains import LLMChain\n",
@@ -234,6 +234,8 @@
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
         "import torch\n",
         "import accelerate\n",
+        "from peft import get_peft_model, LoraConfig, TaskType\n",
+        "from datasets import Dataset\n",
         "\n",
         "!git clone https://github.com/CKZ1107/COMP6713-NLP.git\n",
         "%cd COMP6713-NLP\n",
@@ -255,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "26eb956d",
       "metadata": {
         "colab": {
@@ -295,22 +297,110 @@
         "num_epochs = 45\n",
         "learning_rate = 2e-5\n",
         "aggregation_method = 'attention'\n",
-        "early_stopping_patience = 6\n",
         "use_wordnet = True\n",
-        "focal_gamma = 2.0\n",
         "dataset_path = 'dataset.csv'\n",
         "label_list = [-1, 1]\n",
-        "stock = \"stock\"\n",
         "\n",
-        "# dataset and dataloaders\n",
+        "# Split datasets\n",
         "df = pd.read_csv(dataset_path)\n",
         "train_datasets, val_datasets, test_datasets = get_split_datasets(\n",
         "    df, labels=label_list, use_wordnet=use_wordnet, max_chunk_length=max_chunk_length, max_chunks=max_chunks\n",
         ")\n",
-        "train_loader, train_df = train_datasets\n",
-        "val_loader, val_df = val_datasets\n",
-        "test_loader, test_df = test_datasets\n",
-        "num_stocks = len(df[stock].unique())"
+        "_, train_df = train_datasets\n",
+        "_, val_df = val_datasets\n",
+        "_, test_df = test_datasets\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "012842b1",
+      "metadata": {},
+      "source": [
+        "## 3. Fine-tuning using LoRA"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "36d0953e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Convert to input-output format for LoRA\n",
+        "def convert(row):\n",
+        "    return {\n",
+        "        \"input\": f\"Classify sentiment: {row['post']}\",\n",
+        "        \"output\": row[\"label\"]\n",
+        "    }\n",
+        "\n",
+        "converted = df.apply(convert, axis=1).tolist()\n",
+        "dataset = Dataset.from_list(converted)\n",
+        "\n",
+        "# Split the dataset\n",
+        "split_dataset = dataset.train_test_split(test_size=0.3)\n",
+        "train_data = split_dataset[\"train\"]\n",
+        "eval_data = split_dataset[\"test\"]\n",
+        "\n",
+        "tokenizer = T5Tokenizer.from_pretrained(\"google/flan-t5-xl\")\n",
+        "\n",
+        "def tokenize(example):\n",
+        "    model_inputs = tokenizer(\n",
+        "        example[\"input\"], truncation=True, padding=\"max_length\", max_length=512\n",
+        "    )\n",
+        "    labels = tokenizer(\n",
+        "        example[\"output\"], truncation=True, padding=\"max_length\", max_length=8\n",
+        "    )\n",
+        "    model_inputs[\"labels\"] = labels[\"input_ids\"]\n",
+        "    return model_inputs\n",
+        "\n",
+        "tokenized_train = train_data.map(tokenize)\n",
+        "tokenized_eval = eval_data.map(tokenize)\n",
+        "\n",
+        "model = T5ForConditionalGeneration.from_pretrained(\"google/flan-t5-xl\", torch_dtype=torch.bfloat16)\n",
+        "\n",
+        "# Apply LoRA\n",
+        "target_modules = [\"q\", \"v\"]\n",
+        "peft_config = LoraConfig(\n",
+        "    task_type=TaskType.SEQ_2_SEQ_LM,\n",
+        "    r=8,\n",
+        "    lora_alpha=16,\n",
+        "    lora_dropout=0.1,\n",
+        "    bias=\"none\",\n",
+        "    target_modules=target_modules\n",
+        ")\n",
+        "model = get_peft_model(model, peft_config)\n",
+        "\n",
+        "# TrainingArguments\n",
+        "training_args = TrainingArguments(\n",
+        "    output_dir=\"./flan_lora_sentiment\",\n",
+        "    per_device_train_batch_size=1,\n",
+        "    per_device_eval_batch_size=1,\n",
+        "    evaluation_strategy=\"epoch\",\n",
+        "    logging_dir=\"./logs\",\n",
+        "    learning_rate=1e-4,\n",
+        "    num_train_epochs=3,\n",
+        "    save_strategy=\"epoch\",\n",
+        "    report_to=\"none\",\n",
+        "    fp16=True,\n",
+        "    push_to_hub=False\n",
+        ")\n",
+        "\n",
+        "# Trainer setup\n",
+        "trainer = Trainer(\n",
+        "    model=model,\n",
+        "    args=training_args,\n",
+        "    train_dataset=tokenized_train,\n",
+        "    eval_dataset=tokenized_eval,\n",
+        "    tokenizer=tokenizer,\n",
+        "    data_collator=DataCollatorForSeq2Seq(tokenizer, model=model)\n",
+        ")\n",
+        "\n",
+        "# Train the model\n",
+        "trainer.train()\n",
+        "\n",
+        "# Save the adapter model\n",
+        "model.save_pretrained(\"flan-lora-adapter\")\n",
+        "tokenizer.save_pretrained(\"flan-lora-adapter\")"
       ]
     },
     {
@@ -337,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "1f47b679",
       "metadata": {
         "colab": {
@@ -543,21 +633,15 @@
         }
       ],
       "source": [
-        "model_name = \"google/flan-t5-xl\"\n",
-        "\n",
-        "# Load tokenizer and model\n",
-        "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-        "model = AutoModelForSeq2SeqLM.from_pretrained(\n",
-        "    model_name,\n",
-        "    torch_dtype=torch.bfloat16,\n",
-        ").cuda()\n",
+        "model = T5ForConditionalGeneration.from_pretrained(\"flan-lora-adapter\")\n",
+        "tokenizer = T5Tokenizer.from_pretrained(\"flan-lora-adapter\")\n",
         "\n",
         "# Create pipeline\n",
         "pipe = pipeline(\n",
         "    \"text2text-generation\",\n",
         "    model=model,\n",
         "    tokenizer=tokenizer,\n",
-        "    max_new_tokens=256,\n",
+        "    max_new_tokens=10,\n",
         "    device=0 if torch.cuda.is_available() else -1\n",
         ")\n",
         "\n",
